# my-project-3

./: .pre-commit-config.yaml  LICENCE  README.md  mkdocs.yml  pyproject.toml
docs/: api_docs.md
my_project_3/: __init__.py
